--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   position: fixed;
   top: 0;
   left: 0;
+  /* iOS safe areas */
+  padding-top: env(safe-area-inset-top);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 /* Empty State */
